--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#booking">
               <span class="en-content">Booking</span>
-              <span class="fr-content">Réservation</span></a>
+              <span class="fr-content">Réservations</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">
@@ -64,8 +64,8 @@
         <span class="hide-content">Riviera Mobility</span>
       </h1>
       <p class="lead mb-4">
-        <span class="en-content">Your private drivers on the French Riviera</span>
-        <span class="fr-content">Vos chauffeurs privés sur la Côte d'Azur</span>
+        <span class="en-content">Your private taxi drivers on the French Riviera</span>
+        <span class="fr-content">Vos chauffeurs taxi privés sur la Côte d'Azur</span>
       </p>
       <a href="#booking" class="btn btn-primary btn-lg">
         <span class="en-content">Book Now</span>
@@ -78,7 +78,7 @@
   <section class="py-5 bg-light">
     <div class="container text-center">
       <div class="social-links d-flex justify-content-center align-items-center gap-5 py-4">
-        <a href="https://www.instagram.com/rivieramobility" target="_blank" class="text-dark d-flex align-items-center">
+        <a href="https://www.instagram.com/riviera_mobility_taxi" target="_blank" class="text-dark d-flex align-items-center">
           <i class="fab fa-instagram fa-2x me-2"></i>
           <span>
             <span class="en-content">Follow us on Instagram</span>
@@ -173,7 +173,7 @@
     <div class="container">
       <h2 class="text-center mb-5">
         <span class="en-content">Booking</span>
-        <span class="fr-content">Réservation</span>
+        <span class="fr-content">Réservations</span>
       </h2>
       <div class="row justify-content-center">
         <div class="col-md-8">
@@ -319,65 +319,7 @@
     </div>
   </footer>
 
-  <script>
-
-    function setLanguage(lang) {
-      document.documentElement.lang = lang;
-      updateServiceOptions();
-    }
-
-    function formatEmail(form) {
-      const formData = new FormData(form);
-      const subject = document.documentElement.lang === 'fr' ? 'Nouvelle Demande de Réservation' : 'New Booking Request';
-      const body = Array.from(formData.entries())
-        .map(([key, value]) => `${key}: ${value}`)
-        .join('\n');
-
-      window.location.href = `mailto:booking@rivieramobility.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
-      return false;
-    }
-
-    // Update the service select options when language changes
-    function updateServiceOptions() {
-      const lang = document.documentElement.lang;
-      const select = document.getElementById('serviceSelect');
-      const options = {
-        airport: { en: 'Airport Transfer', fr: 'Transfert Aéroport' },
-        events: { en: 'Special Events', fr: 'Événements Spéciaux' },
-        excursions: { en: 'Tourist Excursions', fr: 'Excursions Touristiques' },
-        medical: { en: 'Medical Transport', fr: 'Transport Médical' }
-      };
-
-      select.options[0].text = lang === 'fr' ? '...' : '...';
-
-      Object.entries(options).forEach(([value, texts], index) => {
-        select.options[index + 1].text = texts[lang];
-      });
-    }
-
-    document.addEventListener('DOMContentLoaded', function () {
-      const urlParams = new URLSearchParams(window.location.search);
-      const service = urlParams.get('service');
-
-      if (service) {
-        document.getElementById('services').scrollIntoView({ behavior: 'smooth' });
-
-        const serviceCards = document.querySelectorAll('.service-card');
-        serviceCards.forEach(card => {
-          if (card.dataset.service === service) {
-            card.classList.add('highlighted');
-            setTimeout(() => card.classList.remove('highlighted'), 2000);
-          }
-        });
-      }
-      setLanguage('en');
-      updateServiceOptions();
-    });
-  </script>
-
-
-
-  <!-- Bootstrap Bundle with Popper -->
+  <script src="js/scripts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
