--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 
 <head>
+  <title>Riviera Mobility - Private Taxi Service in Villefranche-sur-Mer | Airport Transfers</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Riviera Mobility - Taxi Conventionné à Villefranche-sur-Mer</title>
+  <meta name="description"
+    content="Professional private taxi and medical transport service in Villefranche-sur-Mer. Airport transfers, tourist excursions, and CPAM-approved medical transport on the French Riviera.">
+  <meta name="keywords"
+    content="taxi villefranche sur mer, airport transfer nice, medical transport cpam, private driver french riviera">
+
+  <meta property="og:title" content="Riviera Mobility - Private Taxi Service">
+  <meta property="og:description"
+    content="Professional private taxi and medical transport service in Villefranche-sur-Mer">
+  <meta property="og:image" content="assets/img/rm-logo-card.png">
+  <meta property="og:url" content="https://rivieramobility.com">
+
+  <link rel="alternate" hreflang="en" href="https://rivieramobility.com?lang=en">
+  <link rel="alternate" hreflang="fr" href="https://rivieramobility.com?lang=fr">
+  <link rel="canonical" href="https://rivieramobility.com">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/styles.css" />
@@ -18,10 +32,10 @@
   </div>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" role="navigation" aria-label="Main navigation">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="assets/img/rm-logo2.png" alt="Riviera Mobility" class="navbar-logo me-2" />
+        <img src="assets/img/rm-logo2.png" alt="Riviera Mobility Logo" class="navbar-logo me-2" loading="lazy" width="40" height="40">
         <span>Riviera Mobility</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -78,7 +92,8 @@
   <section class="py-5 bg-light">
     <div class="container text-center">
       <div class="social-links d-flex justify-content-center align-items-center gap-5 py-4">
-        <a href="https://www.instagram.com/riviera_mobility_taxi" target="_blank" class="text-dark d-flex align-items-center">
+        <a href="https://www.instagram.com/riviera_mobility_taxi" target="_blank"
+          class="text-dark d-flex align-items-center">
           <i class="fab fa-instagram fa-2x me-2"></i>
           <span>
             <span class="en-content">Follow us on Instagram</span>
@@ -178,7 +193,7 @@
       <div class="row justify-content-center">
         <div class="col-md-8">
           <form action="mailto:booking@rivieramobility.com" method="post" enctype="text/plain"
-            onsubmit="return formatEmail(this);">
+            onsubmit="return formatEmail(this);" role="form" aria-label="Booking form">
             <div class="row g-3">
               <!-- Name Field -->
               <div class="col-md-6">
@@ -319,8 +334,32 @@
     </div>
   </footer>
 
-  <script src="js/scripts.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Riviera Mobility",
+        "image": "assets/img/rm-logo-card.png",
+        "description": "Professional private taxi and medical transport service in Villefranche-sur-Mer",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Villefranche-sur-Mer",
+            "addressCountry": "FR"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": "43.7037",
+            "longitude": "7.3139"
+        },
+        "url": "https://rivieramobility.com",
+        "telephone": "+33603729211",
+        "priceRange": "€€€"
+    }
+    </script>
+
+
+  <script src="js/scripts.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
 
 </html>
